# lightbridge-authz

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  E2E_TESTING.md  README.md  REVIEW.md  compose.it.yaml  compose.yaml  deny.toml  diesel.toml  envoyproxy-crd.minimal.yaml  envoyproxy-crd.yaml  file.json  index.yaml  justfile  k8s-postgresql.yaml  k8s-test-deploy.yaml  plan.md  usageapi.json
.docker/authz/: container.yaml
.docker/envoy/: envoy.yaml
.docker/it/: authorino_it.py  servers_it.py
.docker/keycloak_config/: realm.json
.docker/usage/: container.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  docker.yml  helm-gh-pages.yml  security.yml
.roo/: mcp.json
.roo/commands/: api-endpoint.md  crate-module.md  review.md
.roo/rules/: 2-commit-message.md  3-docs.md  4-project.md  AGENTS.md
app/lightbridge-authz/: Cargo.toml
app/lightbridge-authz-healthcheck/: Cargo.toml
app/lightbridge-authz-migrate/: Cargo.toml
app/lightbridge-authz-migrate-bin/: Cargo.toml
app/lightbridge-authz-migrate-bin/src/: main.rs
app/lightbridge-authz-usage/: Cargo.toml
app/lightbridge-authz-usage/src/: main.rs
app/lightbridge-authz-usage/src/utils/: banner.rs  cli.rs
app/lightbridge-mcp/: Cargo.toml
app/lightbridge-mcp/src/: main.rs
app/lightbridge-mcp/src/utils/: banner.rs  cli.rs  mod.rs
artifacts/helm/: index.yaml  lightbridge-0.5.0.tgz  lightbridge-authz-0.5.0.tgz  lightbridge-migrate-0.1.0.tgz
charts/lightbridge/: Chart.yaml  test.yaml  values.yaml
charts/lightbridge-authz/: Chart.yaml  values-test.yaml  values.yaml
charts/lightbridge-authz-usage/: Chart.yaml  values.yaml
charts/lightbridge-config/: Chart.yaml  test.yaml  values.yaml
charts/lightbridge-mcp/: Chart.yaml  values.yaml
charts/lightbridge-migrate/: Chart.yaml  values.yaml
config/: container.yaml  default.yaml  usage.yaml
crates/lightbridge-authz-api/: Cargo.toml
crates/lightbridge-authz-api-key/: Cargo.toml
crates/lightbridge-authz-api-key/src/: acl_repo.rs  db.rs  entities.rs  lib.rs  mappers.rs  repo.rs
crates/lightbridge-authz-api-key/src/entities/: account_row.rs  acl_model_row.rs  acl_row.rs  api_key_row.rs  mod.rs  new_account_row.rs  new_acl_model_row.rs  new_acl_row.rs  new_api_key_row.rs  new_project_row.rs  project_row.rs
crates/lightbridge-authz-api-key/src/repositories/: api_key_create.rs  api_key_delete.rs  api_key_list.rs  api_key_read.rs  api_key_repository.rs  api_key_update.rs  mod.rs
crates/lightbridge-authz-api-key/tests/: access_control_scenarios_tests.rs  project_limits_tests.rs  rotate_transaction_tests.rs
crates/lightbridge-authz-api/src/: api_key_crud.rs  api_key_handler.rs  api_key_handlers.rs  api_key_reader.rs  controllers.rs  db.rs  handlers.rs  lib.rs  openapi.rs  routers.rs  schema.rs  store.rs
crates/lightbridge-authz-api/src/controllers/: accounts.rs  api_keys.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  patch.rs  projects.rs
crates/lightbridge-authz-api/tests/: basic.rs
crates/lightbridge-authz-bearer/: Cargo.toml
crates/lightbridge-authz-bearer/src/: lib.rs
crates/lightbridge-authz-cli/: Cargo.toml
crates/lightbridge-authz-cli/src/: healthcheck.rs  main.rs
crates/lightbridge-authz-cli/src/utils/: banner.rs  cli.rs
crates/lightbridge-authz-core/: Cargo.toml
crates/lightbridge-authz-core/src/: api_key.rs  crypto.rs  db.rs  dto.rs  error.rs  lib.rs  migrate.rs  schema.rs  server.rs  tracing.rs
crates/lightbridge-authz-core/src/config/: mod.rs
crates/lightbridge-authz-grpc/: Cargo.toml
crates/lightbridge-authz-grpc/src/: echo.rs  lib.rs  main.rs  server.rs  types.rs
crates/lightbridge-authz-grpc/tests/: helper_tests.rs  server_tests.rs
crates/lightbridge-authz-mcp/: Cargo.toml
crates/lightbridge-authz-mcp/src/: lib.rs
crates/lightbridge-authz-migrate/: Cargo.toml
crates/lightbridge-authz-migrate/src/: migrate.rs
crates/lightbridge-authz-proto/: Cargo.toml  build.rs
crates/lightbridge-authz-rest/: Cargo.toml
crates/lightbridge-authz-rest/src/: handlers.rs  lib.rs  middleware.rs
crates/lightbridge-authz-rest/src/handlers/: authorino.rs  mod.rs  opa.rs
crates/lightbridge-authz-rest/src/middleware/: mod.rs
crates/lightbridge-authz-rest/src/models/: authorino.rs  mod.rs
crates/lightbridge-authz-rest/src/routers/: mod.rs
crates/lightbridge-authz-rest/tests/: api_tests.rs  load_tests.rs  mock_repository.rs  opa_tests.rs
crates/lightbridge-authz-test-utils/: Cargo.toml
crates/lightbridge-authz-test-utils/src/: api.rs  lib.rs
crates/lightbridge-authz-usage/: Cargo.toml
crates/lightbridge-authz-usage-migrate/: Cargo.toml
crates/lightbridge-authz-usage/src/: config.rs  instrumentation.rs  lib.rs  repo.rs  tracing.rs
crates/lightbridge-authz-usage/src/handlers/: ingest.rs  query.rs
crates/lightbridge-authz-usage/src/models/: mod.rs
crates/lightbridge-authz-usage/src/routers/: mod.rs
crates/lightbridge-authz-usage/tests/: usage_tests.rs
deployment/: ai-backend.yaml  auth-adapter.yaml  ext-authz-policy.yaml  gateway.yaml  http-route.yaml  keycloak.yaml  postgres.yaml  reference-grant.yaml  self-service-deployment.yaml
docs/: api-architecture.md  api-key-datamodel.md  architecture-db-oauth2.md  authorino-usage.md  ci-cd-architecture.md  developer-guide.md  grpc-external-authz.md  lightbridge-query-api.md  overall.md  platform-guides.md  test-app-workflow.md  test-protocol.md  testing-strategy.md  usage-api.md  usage-frontend-integration.md
migrations/: 20260203000001_init_authz.sql  20260220000001_refactor_models.sql  20260304000001_account_memberships.sql
migrations-usage/: 20260223000001_init_usage.sql  20260320000001_total_cost.sql  20260506000001_usage_event_subject_dimensions.sql
migrations/2025-08-10-084534_create_initial_tables/: up.sql
migrations/2025-08-10-163932_replace_uuid_with_cuid_string/: up.sql
migrations/2025-08-10-211121_add_user_id_to_api_keys/: down.sql  up.sql
plans/: refactor_rest_and_models.md
(+56 files in other folders)
