[workspace]
members = [
    "crates/lightbridge-authz-core",
    "crates/lightbridge-authz-rest",
    "app/lightbridge-authz",
    "app/lightbridge-authz-healthcheck",
    "app/lightbridge-authz-migrate",
    "crates/lightbridge-authz-api",
    "crates/lightbridge-authz-api-key",
    "crates/lightbridge-authz-bearer",
    "crates/lightbridge-authz-migrate",
    "crates/lightbridge-authz-test-utils",
]
resolver = "3"

[workspace.dependencies]
lightbridge-authz-core = { path = "./crates/lightbridge-authz-core" }
lightbridge-authz-rest = { path = "./crates/lightbridge-authz-rest" }
lightbridge-authz-api = { path = "./crates/lightbridge-authz-api" }
lightbridge-authz-api-key = { path = "./crates/lightbridge-authz-api-key" }
lightbridge-authz-bearer = { path = "./crates/lightbridge-authz-bearer" }
lightbridge-authz-migrate = { path = "./crates/lightbridge-authz-migrate" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
jsonwebtoken = { version = "9.3.1" }
jwks = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing", "net"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "serde", "serde_json"] }
axum = { version = "0.8", features = ["macros", "tracing"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
cuid = { version = "1" }
rand_core = { version = "0.9.3", features = ["os_rng"] }
rand = "0.8"
goose = "0.17"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "macros"] }

mimalloc = "0"

[profile.prod]
inherits = "release"
lto = true
opt-level = "z"
codegen-units = 1
incremental = false
strip = true

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
publish = false
authors = [
    "Stephane Segning <selastlambou@gmail.com>"
]
