[package]
name = "lightbridge-authz-migrate-bin"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
lightbridge-authz-core.workspace = true
lightbridge-authz-migrate.workspace = true

[[bin]]
name = "lightbridge-authz-migrate"
path = "src/main.rs"
