[package]
name = "lightbridge-mcp"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
mimalloc.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

lightbridge-authz-core.workspace = true
lightbridge-authz-mcp.workspace = true

[target.'cfg(target_arch = "x86_64")']
rustflags = ["-C", "target-cpu=native", "-C", "target-feature=+avx2,+fma"]
