[package]
name = "lightbridge-authz-api-key"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lightbridge-authz-core.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
diesel.workspace = true
diesel-async.workspace = true
