[package]
name = "lightbridge-authz-api-key"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
diesel.workspace = true
diesel-async.workspace = true
tracing.workspace = true

[dependencies.lightbridge-authz-core]
workspace = true
features = ["db"]
