[package]
name = "lightbridge-authz-api-key"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true

[dependencies.lightbridge-authz-core]
workspace = true

[features]
it-tests = []

[[test]]
name = "rotate_transaction_tests"
path = "tests/rotate_transaction_tests.rs"
required-features = ["it-tests"]

[[test]]
name = "project_limits_tests"
path = "tests/project_limits_tests.rs"
required-features = ["it-tests"]
