[package]
name = "lightbridge-authz-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
async-trait.workspace = true
lightbridge-authz-api-key = { workspace = true }
lightbridge-authz-core = { workspace = true, features = ["axum"] }
tracing.workspace = true
diesel = { workspace = true, features = ["postgres"] }
lightbridge-authz-bearer = { workspace = true }
