[package]
name = "lightbridge-authz-api"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
lightbridge-authz-core = { workspace = true, features = ["axum"] }
tracing.workspace = true
diesel = { workspace = true, features = ["postgres"] }
lightbridge-authz-bearer = { workspace = true }
