[package]
name = "lightbridge-authz-bearer"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lightbridge-authz-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde.features = ["derive"]
jwks.workspace = true
jsonwebtoken.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio.features = ["macros", "rt-multi-thread", "sync"]

[dev-dependencies]
httpmock = "0.7"
serde_json.workspace = true
