[package]
name = "lightbridge-authz-cli"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
lightbridge-authz-core.workspace = true
lightbridge-authz-rest.workspace = true
lightbridge-authz-grpc.workspace = true
axum.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
mimalloc.workspace = true


[[bin]]
name = "lightbridge-authz"
path = "src/main.rs"

[[bin]]
name = "lightbridge-authz-healthcheck"
path = "src/bin/healthcheck.rs"

[[bin]]
name = "lightbridge-authz-migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "lightbridge-authz-grpc"
path = "src/bin/server-grpc.rs"

[[bin]]
name = "lightbridge-authz-rest"
path = "src/bin/server-rest.rs"
