[package]
name = "lightbridge-authz-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cuid.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
chrono.workspace = true
diesel-async.workspace = true
rand_core.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, optional = true }

[features]
default = []
axum = ["dep:axum"]
