[package]
name = "lightbridge-authz-grpc"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
lightbridge-authz-core.workspace = true
lightbridge-authz-proto.workspace = true
chrono.workspace = true
