[package]
name = "lightbridge-authz-grpc"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tonic.workspace = true
tracing.workspace = true
lightbridge-authz-core.workspace = true
lightbridge-authz-proto.workspace = true
lightbridge-authz-api-key.workspace = true
chrono.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
anyhow.workspace = true
diesel-async.workspace = true
