[package]
name = "lightbridge-authz-migrate"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
diesel.workspace = true
diesel_migrations.workspace = true
tracing.workspace = true
lightbridge-authz-core.workspace = true
