[package]
name = "lightbridge-authz-migrate"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
diesel.workspace = true
diesel_migrations.workspace = true
tracing.workspace = true

[dependencies.lightbridge-authz-core]
workspace = true
features = ["db"]
