[package]
name = "lightbridge-authz-rest"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[package.metadata]
description = "REST server crate for Lightbridge Authz"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
lightbridge-authz-api.workspace = true
lightbridge-authz-core.workspace = true
lightbridge-authz-api-key.workspace = true
lightbridge-authz-bearer.workspace = true

[dev-dependencies]
tokio.workspace = true
chrono.workspace = true
anyhow.workspace = true
serde_json.workspace = true
