[package]
name = "lightbridge-authz-rest"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[package.metadata]
description = "REST server crate for Lightbridge Authz"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
base64.workspace = true
axum-server.workspace = true
getrandom.workspace = true
rustls.workspace = true
lightbridge-authz-api.workspace = true
lightbridge-authz-core = { workspace = true, features = ["axum"] }
lightbridge-authz-api-key.workspace = true
lightbridge-authz-bearer.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

[dev-dependencies]
tokio.workspace = true
chrono.workspace = true
anyhow.workspace = true
goose.workspace = true
reqwest.workspace = true

[features]
load-tests = []

[[test]]
name = "load_tests"
path = "tests/load_tests.rs"
harness = false
required-features = ["load-tests"]
