[package]
name = "lightbridge-authz-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
diesel = { workspace = true, features = ["r2d2", "postgres"] }
diesel_migrations = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
