[package]
name = "lightbridge-authz-usage-rest"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
axum-server.workspace = true
chrono.workspace = true
prost.workspace = true
opentelemetry-proto.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
thiserror.workspace = true
hex.workspace = true
regex.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
tracing-opentelemetry.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
tower-http = { workspace = true, features = ["cors"] }
lightbridge-authz-core = { workspace = true, features = ["axum"] }

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true
